syntax = "proto3";

package sf.solana.dex.spl.v1;

message SplTokens {
    repeated SplTokenMeta data = 1;
}

message SplTokenMeta {
    string block_date = 1;
    int64 block_time = 2;
    string tx_id = 3;
    string dapp = 4;
    uint64 block_slot = 5;
    uint32 instruction_index = 6;
    bool is_inner_instruction = 7;
    uint32 inner_instruction_index = 8;
    string instruction_type = 9;
    Accounts input_accounts = 10;
    Arg args = 11;
    string outer_program = 12;
}

message Accounts {
    optional string mint = 1;
    optional string rent_sysvar = 2;
    optional string account = 3;
    optional string owner = 4;
    repeated string signer_accounts = 5;
    optional string source = 6;
    optional string destination = 7;
    optional string delegate = 8;
    optional string authority = 9;
    optional string payer = 10;
    optional string fund_relocation_sys_program = 11;
    optional string funding_account = 12;
    optional string mint_funding_sys_program = 13;
}

message Arg {
    optional uint64 amount = 1;
    optional string authority_type = 2;
    optional string freeze_authority = 3;
    optional int32 freeze_authority_option = 4;
    optional string mint_authority = 5;
    optional string new_authority = 6;
    optional int32 new_authority_option = 7;
    optional string owner = 8;
    optional int32 decimals = 9;
    optional int32 extension_type = 10;
    optional string ui_amount = 11;
    optional int32 status = 12;
}